--- a/machine_learning_with_sparsity_inducing_regularizations/L1_norm_regularization.ipynb
+++ b/machine_learning_with_sparsity_inducing_regularizations/L1_norm_regularization.ipynb
@@ -58,7 +58,7 @@
    ],
    "source": [
     "# Iteratively Reweighted Shrinkage (IRS)\n",
-    "function L1opt_IRS(A,Y,lambda=1.0e-4,tor=1.0e-4,max_iters=1e3)\n",
+    "function L1opt_IRS(A,Y,lambda=1.0e-4,tol=1.0e-4,max_iters=1e3)\n",
     "    M = size(A,2)\n",
     "    D = size(Y,2)\n",
     "    eta = ones(M,D)\n",
@@ -70,7 +70,7 @@
     "            eta[:,i] = map(x->1.0/abs(x), X[:,i])\n",
     "        end\n",
     "                \n",
-    "        if norm(X - X_t)  < tor\n",
+    "        if norm(X - X_t)  < tol\n",
     "            break \n",
     "        else\n",
     "            X, X_t = X_t, X\n",
@@ -100,7 +100,7 @@
    ],
    "source": [
     "# Iterative-Shrinkage Thresholding Algorithm (ISTA)\n",
-    "function L1opt_ISTA(A,Y,lambda=1.0e-4,tor=1.0e-4,max_iters=1e4)\n",
+    "function L1opt_ISTA(A,Y,lambda=1.0e-4,tol=1.0e-4,max_iters=1e4)\n",
     "    X = A'*Y\n",
     "    #X = randn(size(A,2),size(Y,2))\n",
     "    Xt = similar(X)\n",
@@ -108,7 +108,7 @@
     "    prox_L1(y) = abs(y)>(lambda/L) ? y-sign(y)*(lambda/L) : 0.0\n",
     "    for k=1:max_iters\n",
     "        Xt[:,:] = map(prox_L1, X-A'*(A*X-Y)/L)\n",
-    "        if norm(X-Xt) < tor\n",
+    "        if norm(X-Xt) < tol\n",
     "            return Xt\n",
     "        else\n",
     "            X,Xt = Xt,X\n",
@@ -138,7 +138,7 @@
    ],
    "source": [
     "# Fast Iterative-Shrinkage Thresholding Algorithm(FISTA)\n",
-    "function L1opt_FISTA(A,Y,lambda=1.0e-4,tor=1.0e-4,max_iters=1e5)\n",
+    "function L1opt_FISTA(A,Y,lambda=1.0e-4,tol=1.0e-4,max_iters=1e5)\n",
     "    X = A'*Y\n",
     "    #X = randn(size(A,2),size(Y,2))\n",
     "    Z = copy(X)\n",
@@ -151,7 +151,7 @@
     "        Xt[:,:] = map(prox_L1, Z-A'*(A*Z-Y)/L)\n",
     "        Z[:,:] = Xt+(s-1)/st*(Xt-X)\n",
     "        s = st\n",
-    "        if norm(X-Xt) < tor\n",
+    "        if norm(X-Xt) < tol\n",
     "            break\n",
     "        else\n",
     "            Xt,X = X,Xt\n",
@@ -183,10 +183,10 @@
     "using Convex\n",
     "using SCS\n",
     "\n",
-    "function L1opt(A,Y,lambda=1.0e-4,tor=1.0e-4,max_iters=1e5)\n",
+    "function L1opt(A,Y,lambda=1.0e-4,tol=1.0e-4,max_iters=1e5)\n",
     "    X = Variable(size(A,2),size(Y,2))\n",
     "    problem = minimize(sumsquares(A*X-Y)+lambda*norm(X,1))\n",
-    "    solve!(problem, SCSSolver(max_iters=max_iters,eps=tor,verbose=false))\n",
+    "    solve!(problem, SCSSolver(max_iters=max_iters,eps=tol,verbose=false))\n",
     "    X.value\n",
     "end"
    ]
